# backend/api/infrastructure/models.go
@@ -17,6 +17,8 @@ type Usuario struct {
 	Correo            string     `gorm:"type:varchar(255);unique;not null" json:"correo"`
 	PasswordHash      *string    `gorm:"type:varchar(255)" json:"-"`
 	NombreCompleto    string     `gorm:"type:varchar(255);not null" json:"nombre_completo"`
+	Telefono          *string    `gorm:"type:varchar(50)" json:"telefono,omitempty"`
+	Direccion         *string    `gorm:"type:varchar(255)" json:"direccion,omitempty"`
 	URLAvatar         *string    `gorm:"type:varchar(500)" json:"url_avatar,omitempty"`
 	Rol               string     `gorm:"type:varchar(30);default:'registrado';not null" json:"rol"`
 	CuotaTokensIA     int        `gorm:"default:1000;not null" json:"cuota_tokens_ia"`
